--- a/outfitz/package.json
+++ b/outfitz/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.5",
     "next": "14.2.4",
     "react": "^18",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "nodemon": "^3.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
