--- a/outfitz/package.json
+++ b/outfitz/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.2",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.5",
